// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History redirects if unassigned 1`] = `
<div
  className="ui container view-wrapper"
>
  <h1>
    Forbidden
  </h1>
  <p
    className="description"
  >
    We apologize for the inconvenience, but you don't have permissions on this resource.
  </p>
</div>
`;

exports[`History redirects if unassigned, no token gives unauthorized 1`] = `
<div
  className="ui container view-wrapper"
>
  <h1>
    Unauthorized
  </h1>
  <h3 />
  <p
    className="description"
  >
    You are trying to access a protected resource, please 
    <a
      href="/blog/login"
      onClick={[Function]}
    >
      log in
    </a>
     first.
  </p>
  <p>
    If you are certain you have the correct web address but are encountering an error, please contact the 
    <a
      href="/contact-form"
      onClick={[Function]}
    >
      Site Administration
    </a>
    .
  </p>
  <p>
    Thank you.
  </p>
</div>
`;

exports[`History renders a history component 1`] = `
<div
  className="ui container"
  id="page-history"
>
  <div
    className="ui raised segments"
  >
    <div
      className="ui segment primary"
    >
      History of 
      <q>
        Blog
      </q>
    </div>
    <div
      className="ui secondary segment"
    >
      You can view the history of your item below.
    </div>
    <table
      className="ui selectable single line attached compact table"
    >
      <thead
        className=""
      >
        <tr
          className=""
        >
          <th
            className="one wide"
          >
            #
          </th>
          <th
            className="four wide"
          >
            What
          </th>
          <th
            className="four wide"
          >
            Who
          </th>
          <th
            className="four wide"
          >
            When
          </th>
          <th
            className="four wide"
          >
            Change Note
          </th>
          <th
            className=""
          />
        </tr>
      </thead>
      <tbody
        className=""
      >
        <tr
          className=""
        >
          <td
            className=""
          >
            <span />
          </td>
          <td
            className=""
          >
            <span>
              Publish
               (Private → Published)
            </span>
          </td>
          <td
            className=""
          >
            Web Admin
          </td>
          <td
            className=""
          >
            <time
              dateTime="2017-04-19T14:09:36+02:00"
              title="Wednesday, April 19, 2017 at 12:09 PM"
            >
              4/19/2017
            </time>
          </td>
          <td
            className=""
          >
            
          </td>
          <td
            className=""
          />
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            <span />
          </td>
          <td
            className=""
          >
            <span>
              Edited
            </span>
          </td>
          <td
            className=""
          >
            Web Admin
          </td>
          <td
            className=""
          >
            <time
              dateTime="2017-04-19T14:09:35+02:00"
              title="Wednesday, April 19, 2017 at 12:09 PM"
            >
              4/19/2017
            </time>
          </td>
          <td
            className=""
          >
            Changed text
          </td>
          <td
            className=""
          >
            <div
              aria-expanded={false}
              className="ui dropdown"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <i
                aria-hidden="true"
                className="ellipsis horizontal icon"
                onClick={[Function]}
              />
              <div
                className="menu transition left"
              />
            </div>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            <span />
          </td>
          <td
            className=""
          >
            <span>
              Create
               (Private)
            </span>
          </td>
          <td
            className=""
          >
            Web Admin
          </td>
          <td
            className=""
          >
            <time
              dateTime="2017-04-19T14:09:34+02:00"
              title="Wednesday, April 19, 2017 at 12:09 PM"
            >
              4/19/2017
            </time>
          </td>
          <td
            className=""
          >
            
          </td>
          <td
            className=""
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    id="Portal"
  />
</div>
`;
